--- a/build.gradle
+++ b/build.gradle
@@ -30,12 +30,12 @@ dependencies {
 	// 편의성
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-	// Mybatis
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
-
-	// JPA
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//	// Mybatis
+//	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+//	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+//
+//	// JPA
+//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
