--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,9 @@ dependencies {
 
 	// Springboot
 	implementation 'org.springframework.boot:spring-boot-starter'
+	implementation 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
 	// SpringWeb
@@ -30,12 +32,15 @@ dependencies {
 	// 편의성
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-//	// Mybatis
-//	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-//	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
-//
-//	// JPA
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	// Database
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+
+	// Mybatis
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
+	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
+
+	// JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
 tasks.named('test') {
