--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,17 @@ dependencies {
 
 	// Validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	// 파일 테스트
+	testImplementation 'org.mockito:mockito-core:5.2.0'
+
+	// File 변환 라이브러리
+	implementation 'org.apache.poi:poi:5.2.3'
+	implementation 'org.apache.poi:poi-ooxml:5.2.3'
+	implementation 'commons-io:commons-io:2.11.0'
+	// PDFBox 라이브러리를 사용할 경우
+	implementation 'org.apache.pdfbox:pdfbox:2.0.27'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 tasks.named('test') {
